[package]
name = "patchver_wasm"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/denoland/patchver"
authors = ["the Deno authors"]
license = "MIT"

[lib]
name = "patchver_wasm"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
patchver = { path = "../" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "=0.2.90"

